<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">"LOG IN"</string>
    <string name="or">"OR"</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="repPass">Repeat password</string>
    <string name="titRegister">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>